@@ -62,7 +62,7 @@ xine-lib (1.1.9) (unreleased)
     This requires conversion to UTF-8 of entities with codes >= 128.
   * Fixed ATSC support. [Bug 1749508]
   * Fixed a possible DVB plugin crash when switching channels.
-  * Fixed ogg demuxer to not discard data at the end of the stream.
+  * Fixed a crash closing the frontend. [Bug FS#3]
   * Fixed deadlock on ao_close while paused.
   * Nicer wakeup behaviour, using select instead of nanosleep (800 -> 100
     wakeups/s).
@@ -70,6 +70,8 @@ xine-lib (1.1.9) (unreleased)
     but not played yet.
   * Fixed a race condition between ao_loop and ao_close to not lose the last
     buffer.
+  * DXR3 encoding with external ffmpeg should be fixed now.
+    (This was broken by ffmpeg revision 9283).
 
 xine-lib (1.1.8)
   * Send a channel-changed event to the frontend when receiving the SYNC
